--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:M0tGhyNzOZuaimket+y86JIksBvf2VZVoFCgnWUxZ+8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://carloansales.herokuapp.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
